2007-01-14  Lars Clausen  <larsrc@static>

	* samples/Makefile.am (EXTRA_DIST): Added new samples to dist.

	* plug-ins/vdx/vdx-import.c: 
	* plug-ins/vdx/vdx-xml.c: 
	* plug-ins/vdx/vdx.h: 
	* plug-ins/vdx/visio-types.h: Updated to version 0.7.  Thanks to
	Ian again for more work on this.

	* objects/KAOS/metaandorrel.c: Full autogap enabled for line-like
	connector. 

	* objects/KAOS/metabinrel.c (mbr_update_data): Added comment on
	why autogap is hard -- this line is a one-segment bezier.  The
	standard bezier object has a generic bezier autogap function that
	could be reused given some work.

2007-01-13  Hans Breuer  <hans@breuer.org>

	* app/menu.c : register action "ViewAntialised" even if we 
	don't HAVE_LIBART ...
	* app/display.c : ... and disable the respective menu entry
	to avoid package dependent ui-file and crashing due to 
	gtk+ bug http://bugzilla.gnome.org/show_bug.cgi?id=396161

2007-01-13  Tommi Vainikainen  <thv@iki.fi>

	* app/diagram_tree_window.c (diagram_tree_window_new): "Diagram
	Tree" window title is now shown as translated.

2007-01-09  Hans Breuer  <hans@breuer.org>

	* objects/UML/class.c : comments were not considered for connection
	point placement. Patch from Vadim Zelenin, fixes bug #342086

2007-01-06  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/Makefile.am : EXTRA_DIST += bbox.py

	* dia.desktop.in : 'svn mv dia.desktop.in dia.desktop.in.in'
	  configure.in : add dia.desktop.in to AC_OUTPUT
	  Makefile.am : changed rule for .desktop handling. Together this 
	should resolve @VERSION@ in the dia.desktop file and thus gives us
	version info via bug-buddy automatically. 
	This is more important with bug-buddy 2.16 cause there the user can
	not manually adapt the version anymore. Hopefully fixes bug #393618 
	(see also bug #348827)

	* plug-ins/python/bbox.py : draws bounding boxes of the objects in the
	active layer into a new layer. Helps analyzing the font size problems.
